fix: add class to main burger menu on races page and style it to align better

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -459,6 +459,10 @@ figcaption a {
         margin-top: 28px;
     }
 
+    .burger-menu-race {
+        margin-right: 35px;
+    }
+
     .burger-menu-sub {
         float: right;
         display: flex;
